# -deep-research-agent-for-interview-prep

./: .env.example  .gitignore  DEVELOPMENT.md  PROJECT_STRUCTURE.md  README.md  example_resume.txt  main.py  pyproject.toml  requirements.txt  run_test.py  run_web.bat  test_api_key.py  test_github_only.py  web_app.py
.claude/: settings.local.json
.streamlit/: config.toml
src/: __init__.py  api_rate_limiter.py  config.py  graph.py  llm.py  progress_tracker.py  rate_limiter.py  schemas.py  state.py
src/nodes/: __init__.py  analyst.py  planner.py  reporter.py  researcher.py  router.py  tools.py  writer.py
src/prompts/: __init__.py  personalization.py  templates.py
src/tools/: __init__.py  github_tool.py  scraper.py  search.py  tavily_tool.py
src/utils/: __init__.py  charts.py  llm.py  pdf_parser.py
tests/: __init__.py  test_scraper.py  test_tools.py
